# map-entity-conflation

./: .gitignore  README.md  pyproject.toml  requirements.txt
Conflation_pipeline/: .gitignore  README_GITHUB.md  requirements.txt
Conflation_pipeline/src/: address_matcher.py  building_matcher.py  config.py  data_loader.py  normalization.py  run_pipeline.py
Evaluation_pipeline/: README.md
Evaluation_pipeline/src/: evaluate.py
Problem2_facade_pipeline/: README_GITHUB.md  requirements.txt
Problem2_facade_pipeline/benchmark_dataset/: problem2_proxy_baseline_correct_reranker_wrong.csv  problem2_proxy_baseline_correct_reranker_wrong_rows.csv  problem2_proxy_candidates.csv  problem2_proxy_confirmed_evaluated_rows.csv  problem2_proxy_evaluated_building_based_rows.csv  problem2_proxy_matched_not_evaluated_rows.csv  problem2_proxy_matched_rows.csv  problem2_proxy_needs_review_evaluated_rows.csv  problem2_proxy_non_building_pois_excluded.csv  (+2 more)
Problem3_seed_enrichment/: README_GITHUB.md
benchmark_dataset/: README.md  benchmark_schema.md  benchmark_statistics.csv  dataset_inspection_report.md  generate_benchmark_candidates.py  reviewed_ground_truth.csv
config/: settings.yaml
notebooks/: exploration.ipynb
src/: __init__.py  candidate_generation.py  config.py  conflation_bundle.py  evaluation.py  feature_engineering.py  io_overture.py  main.py  preprocessing.py  resolution.py  scoring.py  utils.py  visualization.py
tests/: test_candidate_generation.py  test_conflation_bundle.py  test_features.py  test_io_overture.py  test_resolution.py  test_scoring.py
(+82 files in other folders)
